--- a/assets/client/src/pages/external/pages/reset-password/template/reset-password-component.html
+++ b/assets/client/src/pages/external/pages/reset-password/template/reset-password-component.html
@@ -1,8 +1,8 @@
-<form [ngFormModel]="getDefaultControlGroup()" (submit)="resetPassword()">
+<form [formGroup]="getDefaultFormGroup()" (submit)="resetPassword()">
 	<h1>{{ "Reset Password" | translate }}</h1>
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('email')}">
-			<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" ngControl="email" />
+			<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" formControlName="email" />
 		</div>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid email' | translate }}</small></label>
 	</div>
