--- a/assets/client/src/pages/external/pages/update-password/template/update-password-component.html
+++ b/assets/client/src/pages/external/pages/update-password/template/update-password-component.html
@@ -1,14 +1,14 @@
-<form [ngFormModel]="getDefaultControlGroup()" (submit)="updatePassword()">
+<form [formGroup]="getDefaultFormGroup()" (submit)="updatePassword()">
 	<h1>{{ "Update Password" | translate }}</h1>
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('password')}">
-			<input type="password" class="form-control" placeholder="{{ 'New Password' | translate }}" ngControl="password" />
+			<input type="password" class="form-control" placeholder="{{ 'New Password' | translate }}" formControlName="password" />
 		</div>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'At least 6 characters, 1 number and 1 upper case' | translate }}</small></label>
 	</div>
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': confirmationControlIsInvalid('passwordConfirmation', 'password')}">
-			<input type="password" class="form-control" placeholder="{{ 'Confirm Password' | translate }}" ngControl="passwordConfirmation" />
+			<input type="password" class="form-control" placeholder="{{ 'Confirm Password' | translate }}" formControlName="passwordConfirmation" />
 		</div>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'The passwords should match' | translate }}</small></label>
 	</div>
