--- a/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
@@ -8,7 +8,7 @@
 
             <div class="form-group">
                 <div class="input-group" [ngClass]="{'form-warning': displayTimezoneError()}">
-                    <select class="select2_single form-control" [ngModel]="hotel.timezone" (ngModelChange)="updateTimezone($event)">
+                    <select class="select2_single form-control" [ngModel]="hotel.timezone" (ngModelChange)="updateTimezone($event)" name="hotelTimezone">
                     <option value="" disabled></option>
                 	<option *ngFor="let timezone of timezoneList" [value]="timezone.name">{{timezone.name}}</option>
             	</select>
