--- a/assets/client/src/pages/internal/containers/common/inventory/allotments/pages/allotment-edit/sections/constraints/constraint-modal/template/allotment-constraint-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/allotments/pages/allotment-edit/sections/constraints/constraint-modal/template/allotment-constraint-modal.html
@@ -9,7 +9,7 @@
 		</div>
 		<div class="col-md-8 col-sm-8 col-xs-8">
 			<div class="form-group">
-				<select class="form-control" [ngModel]="constraintDO.type" (ngModelChange)="didChangeConstraintType($event)">
+				<select class="form-control" [ngModel]="constraintDO.type" (ngModelChange)="didChangeConstraintType($event)" name="constraintDOType">
 					<option *ngFor="let constraintMeta of constraintMetaList" [value]="constraintMeta.constraintType">
 						{{constraintMeta.title | translate}}
 					</option>
