--- a/assets/client/src/pages/internal/containers/common/inventory/modals/room-categories/template/room-categories-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/room-categories/template/room-categories-modal.html
@@ -15,7 +15,7 @@
 					{{roomCategoryVM.roomCategory.displayName}}
 				</td>
 				<td *ngIf="roomCategoryVM.isEditing">
-					<input type="text" class="form-control" [(ngModel)]="roomCategoryVM.roomCategory.displayName" (keyup.enter)="saveRoomCategory(roomCategoryVM)"
+					<input type="text" class="form-control" [(ngModel)]="roomCategoryVM.roomCategory.displayName" name="roomCategDisplayName" (keyup.enter)="saveRoomCategory(roomCategoryVM)"
 					/>
 				</td>
 
