--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/capacity-edit/template/booking-capacity-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/capacity-edit/template/booking-capacity-editor.html
@@ -17,7 +17,7 @@
                 <div class="form-group">
                     <div class="input-group input-group-small" [ngClass]="{'form-warning': !bookingCapacity.validNoAdults()}">
                         <span class="input-group-addon"><small></small> <i class="fa unitpal-font">:</i></span>
-                        <input type="number" class="form-control" [(ngModel)]="bookingCapacity.noAdults">
+                        <input type="number" class="form-control" [(ngModel)]="bookingCapacity.noAdults" name="noAdults">
                     </div>
                     <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{'Enter a valid number' | translate}}</small></label>
                 </div>
@@ -26,7 +26,7 @@
                 <div class="form-group">
                     <div class="input-group input-group-small" [ngClass]="{'form-warning': !bookingCapacity.validNoChildren()}">
                         <span class="input-group-addon"><small></small> <i class="fa unitpal-font">;</i></span>
-                        <input type="number" class="form-control" [(ngModel)]="bookingCapacity.noChildren">
+                        <input type="number" class="form-control" [(ngModel)]="bookingCapacity.noChildren" name="noChildren">
                     </div>
                     <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{'Enter a valid number' | translate}}</small></label>
                 </div>
@@ -35,7 +35,7 @@
                 <div class="form-group">
                     <div class="input-group input-group-small" [ngClass]="{'form-warning': !bookingCapacity.validNoBabies()}">
                         <span class="input-group-addon"><small></small> <i class="fa unitpal-font">B</i></span>
-                        <input type="number" class="form-control" [(ngModel)]="bookingCapacity.noBabies">
+                        <input type="number" class="form-control" [(ngModel)]="bookingCapacity.noBabies" name="noBabies">
                     </div>
                     <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{'Enter a valid number' | translate}}</small></label>
                 </div>
