--- a/assets/client/src/pages/external/pages/log-in/template/log-in-component.html
+++ b/assets/client/src/pages/external/pages/log-in/template/log-in-component.html
@@ -1,14 +1,14 @@
-<form [ngFormModel]="getDefaultControlGroup()" (submit)="logIn()">
+<form [formGroup]="getDefaultFormGroup()" (submit)="logIn()">
 	<h1>{{ "Login to " | translate }} UnitPal</h1>
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('email')}">
-			<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" ngControl="email" />
+			<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" formControlName="email" />
 		</div>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert your email' | translate }}</small></label>
 	</div>
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('password')}">
-			<input type="password" class="form-control" placeholder="{{ 'Password' | translate }}" ngControl="password" />
+			<input type="password" class="form-control" placeholder="{{ 'Password' | translate }}" formControlName="password" />
 		</div>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert your password' | translate }}</small></label>
 	</div>
