--- a/assets/client/src/pages/external/pages/sign-up/template/sign-up-component.html
+++ b/assets/client/src/pages/external/pages/sign-up/template/sign-up-component.html
@@ -1,39 +1,39 @@
-<form [ngFormModel]="getDefaultControlGroup()" (submit)="signUp()">
+<form [formGroup]="getDefaultFormGroup()" (submit)="signUp()">
 	<h1>{{ "Create Account" | translate }}</h1>
 	
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('hotelName')}">
-			<input type="text" class="form-control" placeholder="{{ 'Hotel Name' | translate }}" ngControl="hotelName" />
+			<input type="text" class="form-control" placeholder="{{ 'Hotel Name' | translate }}" formControlName="hotelName" />
 		</div>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for your hotel' | translate }}</small></label>
 	</div>
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('email')}">
-			<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" ngControl="email" />
+			<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" formControlName="email" />
 		</div>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid email' | translate }}</small></label>
 	</div>
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('password')}">
-			<input type="password" class="form-control" placeholder="{{ 'Password' | translate }}" ngControl="password" />
+			<input type="password" class="form-control" placeholder="{{ 'Password' | translate }}" formControlName="password" />
 		</div>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'At least 6 characters, 1 number and 1 upper case' | translate }}</small></label>
 	</div>
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': confirmationControlIsInvalid('passwordConfirmation', 'password')}">
-			<input type="password" class="form-control" placeholder="{{ 'Confirm Password' | translate }}" ngControl="passwordConfirmation" />
+			<input type="password" class="form-control" placeholder="{{ 'Confirm Password' | translate }}" formControlName="passwordConfirmation" />
 		</div>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'The passwords should match' | translate }}</small></label>
 	</div>
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('firstName')}">
-			<input type="text" class="form-control" placeholder="{{ 'First Name' | translate }}" ngControl="firstName" />
+			<input type="text" class="form-control" placeholder="{{ 'First Name' | translate }}" formControlName="firstName" />
 		</div>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter your first name' | translate }}</small></label>
 	</div>
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('lastName')}">
-			<input type="text" class="form-control" placeholder="{{ 'Last Name' | translate }}" ngControl="lastName" />
+			<input type="text" class="form-control" placeholder="{{ 'Last Name' | translate }}" formControlName="lastName" />
 		</div>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter your last name' | translate }}</small></label>
 	</div>
