--- a/assets/client/src/pages/internal/containers/common/inventory/modals/beds/template/beds-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/beds/template/beds-modal.html
@@ -35,7 +35,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-offset-3 col-xs-6 col-md-offset-3 col-md-6 form-group">
-                    <input type="number" class="form-control" [(ngModel)]="bedSelectionVM.numberOfInstances" [min]="minBedNo" [max]="maxBedNo">
+                    <input type="number" class="form-control" [(ngModel)]="bedSelectionVM.numberOfInstances" name="bedNumberOfInstances" [min]="minBedNo" [max]="maxBedNo">
                 </div>
             </div>
         </div>
