--- a/assets/client/src/pages/internal/containers/common/inventory/modals/yield-filter/template/yield-filter-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/yield-filter/template/yield-filter-modal.html
@@ -20,6 +20,7 @@
 				<td *ngIf="isTextFilter() && yieldFilterValueVM.isEditing"> 
 					<input type="text" class="form-control" 
 						[(ngModel)]="yieldFilterValueVM.filterValue.label" 
+						name="filterValueLabel"
 						(keyup.enter)="saveYieldFilter(yieldFilterValueVM)"
 						/>	 
 				</td>
@@ -32,7 +33,7 @@
 							<div class="color-box" [ngClass]="yieldFilterValueVM.colorMeta.cssClass"></div>
 						</div>
 						<div class="col-xs-6">
-							<select class="form-control" *ngIf="yieldFilterValueVM.isEditing" [ngModel]="yieldFilterValueVM.filterValue.colorCode" (ngModelChange)="didChangeColorCodeFor(yieldFilterValueVM, $event)">
+							<select class="form-control" *ngIf="yieldFilterValueVM.isEditing" [ngModel]="yieldFilterValueVM.filterValue.colorCode" (ngModelChange)="didChangeColorCodeFor(yieldFilterValueVM, $event)" name="colorCode">
 								<option *ngFor="let colorMeta of colorFilter.colorMetaList" [value]="colorMeta.cssClass">{{ colorMeta.displayName | translate }}</option>
 							</select>
 						</div>
@@ -51,6 +52,7 @@
 				<td *ngIf="yieldFilterValueVM.isEditing">
 					<input type="text" class="form-control" 
 						[(ngModel)]="yieldFilterValueVM.filterValue.description" 
+						name="filterValueDescription"
 						(keyup.enter)="saveYieldFilter(yieldFilterValueVM)"
 						/> 
 				</td>
