--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/notes/template/price-product-edit-notes-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/notes/template/price-product-edit-notes-section.html
@@ -1,7 +1,7 @@
-<div class="col-md-12 col-xs-12 form-group" [ngFormModel]="getDefaultControlGroup()">
+<div class="col-md-12 col-xs-12 form-group" [formGroup]="getDefaultFormGroup()">
 	<label>{{ 'Notes' | translate }}</label>
 	<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('notes')}">
-		<textarea class="form-control" ngControl="notes" [readonly]="readonly"></textarea>
+		<textarea class="form-control" formControlName="notes" [readonly]="readonly"></textarea>
 	</div>
 	<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Notes are too long' | translate }}</small></label>
 </div>
