--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/top-section/template/price-product-edit-top-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/top-section/template/price-product-edit-top-section.html
@@ -1,7 +1,7 @@
-<div class="col-md-4 col-xs-12 form-group" [ngFormModel]="getDefaultControlGroup()">
+<div class="col-md-4 col-xs-12 form-group" [formGroup]="getDefaultFormGroup()">
 	<label>{{ 'Price Product Name' | translate }}*</label>
 	<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
-		<input type="text" class="form-control input-group-lg" ngControl="name" [readonly]="readonly">
+		<input type="text" class="form-control input-group-lg" formControlName="name" [readonly]="readonly">
 	</div>
 	<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the product' | translate }}</small></label>
 </div>
