--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
@@ -1,5 +1,5 @@
 <loading-component [isLoading]="isLoading"></loading-component>
-<div *ngIf="!isLoading" [ngFormModel]="getDefaultControlGroup()" class="edit-form-container" customScroll>
+<div *ngIf="!isLoading" [formGroup]="getDefaultFormGroup()" class="edit-form-container" customScroll>
     <div class="edit-form">
         <div class="row">
             <div class="col-xs-12 col-md-8">
@@ -7,7 +7,7 @@
                     <div class="col-xs-12 col-md-6 form-group">
                         <label>{{ 'Name' | translate }}*</label>
                         <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
-                            <input type="text" class="form-control" ngControl="name">
+                            <input type="text" class="form-control" formControlName="name">
                         </div>
                         <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the room' | translate }}</small></label>
                     </div>
@@ -16,7 +16,7 @@
                         <label>{{ 'Floor Number' | translate }}*</label>
                         <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('floor')}">
                             <span class="input-group-addon"><i class="fa fa-caret-square-o-up"></i></span>
-                            <input type="number" class="form-control" ngControl="floor">
+                            <input type="number" class="form-control" formControlName="floor">
                         </div>
                         <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid floor number' | translate }}</small></label>
                     </div>
@@ -131,7 +131,7 @@
                 <label>{{ 'Notes' | translate }}</label>
             </div>
             <div class="col-xs-12 col-md-8 form-group">
-                <textarea class="form-control" ngControl="notes"></textarea>
+                <textarea class="form-control" formControlName="notes"></textarea>
             </div>
         </div>
 
