--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/email-sender/components/email-selector/template/email-selector.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/email-sender/components/email-selector/template/email-selector.html
@@ -4,7 +4,7 @@
             <tr>
                 <th> {{ 'Recipient' | translate }} </th>
                 <th> {{ 'Email' | translate }} </th>
-                <th> <input type="checkbox" [(ngModel)]="selectAll">  {{ 'Select All' | translate }}</th>
+                <th> <input type="checkbox" [(ngModel)]="selectAll" name="selectAll">  {{ 'Select All' | translate }}</th>
             </tr>
         </thead>
         <tbody>
@@ -12,7 +12,7 @@
                 <td width="45%">{{ emailRecipient.recipientName }}</td>
                 <td width="50%" *ngIf="emailRecipient.isValid">{{ emailRecipient.email }}</td>
                 <td width="50%" *ngIf="!emailRecipient.isValid"><i>{{ 'Not configured' | translate }}</i></td>
-                <td width="5%"><input type="checkbox" [ngModel]="emailRecipient.selected" (ngModelChange)="didChangeRecipient(emailRecipient)" [disabled]="!emailRecipient.isValid"></td>
+                <td width="5%"><input type="checkbox" [ngModel]="emailRecipient.selected" (ngModelChange)="didChangeRecipient(emailRecipient)" name="emailRecipient" [disabled]="!emailRecipient.isValid"></td>
             </tr>
         </tbody>
         <tfoot>
@@ -22,7 +22,7 @@
 <div class="col-xs-6">
     <div class="form-group">
         <div class="input-group" [ngClass]="{'form-warning': dirtyNewEmail && !validNewEmail}">
-            <input type="text" class="form-control" placeholder="{{'Insert a different email' | translate}}" [(ngModel)]="newEmail">
+            <input type="text" class="form-control" placeholder="{{'Insert a different email' | translate}}" [(ngModel)]="newEmail" name="newEmail">
         </div>
         <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid email' | translate }}</small></label>
     </div>
