--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/payment-guarantee-edit/template/booking-payment-guarantee-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/payment-guarantee-edit/template/booking-payment-guarantee-editor.html
@@ -22,7 +22,7 @@
 <div class="col-xs-12 col-sm-4 padding-top-5px" *ngIf="!readonly">
     <div class="form-group">
         <div class="input-group">
-            <select class="form-control" [ngModel]="selectedPaymentMethodVM" (ngModelChange)="selectedPaymentMethodVM=$event">
+            <select class="form-control" [ngModel]="selectedPaymentMethodVM" (ngModelChange)="selectedPaymentMethodVM=$event" name="selectedPaymentMethodVM">
                 <option *ngFor="let paymentMethodVM of paymentMethodVMList" [ngValue]="paymentMethodVM">{{paymentMethodVM.displayName | translate}}</option>
             </select>
         </div>
