--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/components/customer-details/template/customer-details-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/components/customer-details/template/customer-details-editor.html
@@ -8,7 +8,7 @@
             <p class="placeholder" *ngIf="notesAreEmpty">{{'None' | translate}}</p>
         </div>
         <div class="col-xs-12 col-sm-8 form-group" *ngIf="!readonly">
-            <textarea class="form-control notes" [(ngModel)]="customerDO.notes"></textarea>
+            <textarea class="form-control notes" [(ngModel)]="customerDO.notes" name="customerNotes"></textarea>
         </div>
 
         <div class="col-xs-12 col-sm-3">
