--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/modals/template/number-of-aop-modal.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/modals/template/number-of-aop-modal.html
@@ -14,7 +14,7 @@
 	<div class="col-xs-12 form-group">
 		<label>{{'Qty' | translate}}</label>
 		<div class="input-group">
-			<input type="number" class="form-control" [(ngModel)]="numberOfAddOnProductsModalOutput.noOfItems">
+			<input type="number" class="form-control" [(ngModel)]="numberOfAddOnProductsModalOutput.noOfItems" name="noOfItems">
 		</div>
 	</div>
 
