--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-filter-pane/template/yield-filter-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-filter-pane/template/yield-filter-pane.html
@@ -3,7 +3,7 @@
 		<span>{{'Yield Filters' | translate}}</span>
 	</div>
 	<div class="pane-search-bar">
-		<input class="remove-auto-border" type="text" placeholder="{{'Search here' | translate}}" [ngModel]="searchText" (ngModelChange)="searchTextChangeHandler($event)">
+		<input class="remove-auto-border" type="text" placeholder="{{'Search here' | translate}}" [ngModel]="searchText" (ngModelChange)="searchTextChangeHandler($event)" name="filterPaneSearchText">
 		<i class="fa fa-search gray-color p-l-6"></i>
 	</div>
 </div>
