--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/new-booking-details-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/new-booking-details-editor.html
@@ -111,7 +111,7 @@
                 <div class="col-md-6 col-xs-6 form-group" *ngIf="paymentGuarantee">
                     <label>{{ 'Payment Method' | translate }}</label>
                     <div class="input-group">
-                        <select class="form-control" [ngModel]="paymentMethod" (ngModelChange)="paymentMethod=$event">
+                        <select class="form-control" [ngModel]="paymentMethod" (ngModelChange)="paymentMethod=$event" name="paymentMethod">
                             <option *ngFor="let paymentMethodVM of paymentMethodVMList" [ngValue]="paymentMethodVM.paymentMethod">{{paymentMethodVM.displayName | translate}}</option>
                         </select>
                     </div>
@@ -122,7 +122,7 @@
                 <div class="col-md-12 col-xs-12 form-group">
                     <label>{{ 'Booking Notes' | translate }}</label>
                     <div class="input-group">
-		                <textarea class="form-control" [(ngModel)]="bookingNotes"></textarea>
+		                <textarea class="form-control" [(ngModel)]="bookingNotes" name="bookingNotes"></textarea>
 	                </div>
                 </div>
             </div>
